# python-sub-interpreter-demo

./: CMakeLists.txt  README.md  main.c  mod.py
